--- a/page1.html
+++ b/page1.html
@@ -262,7 +262,7 @@
 		</div>
 	</section>
 
-	<section data-bs-version="5.1" class="pricing1 cid-u1rUyDRCdV" id="pricing01-29">
+	<div data-bs-version="5.1" class="pricing1 cid-u1rUyDRCdV" id="pricing01-29">
 
 
 		<div class="container">
@@ -351,7 +351,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
 	<section data-bs-version="5.1" class="footer1 cid-u1r3QvSMQr" id="footer01-1t">
 
