--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@
 
 <body>
 
-    <section data-bs-version="5.1" class="menu menu6 cid-u1r6N0aFUL" id="menu06-1v">
+    <div data-bs-version="5.1" class="menu menu6 cid-u1r6N0aFUL" id="menu06-1v">
 
 
         <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
@@ -53,8 +53,8 @@
                             href="index.html#slider04-1w">FlexZone</a></span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
-                    data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
-                   aria-expanded="false" aria-label="Toggle navigation">
+                    data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="hamburger">
                         <span></span>
                         <span></span>
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </nav>
-    </section>
+    </div>
 
     <section data-bs-version="5.1" class="header13 cid-u1ruQHjpxW" id="header13-22">
 
@@ -255,7 +255,7 @@
         </div>
     </section>
 
-    <section data-bs-version="5.1" class="footer1 cid-u1r3QvSMQr" id="footer01-1t">
+    <div data-bs-version="5.1" class="footer1 cid-u1r3QvSMQr" id="footer01-1t">
 
 
 
@@ -290,12 +290,14 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <p class="mbr-section-subtitle mbr-fonts-style mb-2 display-5"><strong>Contact</strong></p>
-                    <ul class="list mbr-fonts-style display-7">Telefon:
-                        07xxxxx
-                        <ul>Mail:
+                    <ul>
+                        <li class="list mbr-fonts-style display-7">Telefon:
+                            07xxxxx </li>
+                        <li>Mail:
                             xxx@xxx.ro
-                        </ul>
+                        </li>
                     </ul>
+
                 </div>
                 <div class="col-12 mt-5 footer-col">
                     <div class="mbr-section-btn align-left"><a class="btn btn-info-outline display-7"
@@ -319,7 +321,7 @@
 
             </div>
         </div>
-    </section>
+    </div>
 
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
