--- a/page1.html
+++ b/page1.html
@@ -353,7 +353,7 @@
 		</div>
 	</div>
 
-	<section data-bs-version="5.1" class="footer1 cid-u1r3QvSMQr" id="footer01-1t">
+	<div data-bs-version="5.1" class="footer1 cid-u1r3QvSMQr" id="footer01-1t">
 
 
 
@@ -418,7 +418,7 @@
 
 			</div>
 		</div>
-	</section>
+	</div>
 
 	<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/smoothscroll/smooth-scroll.js"></script>
