--- a/page2.html
+++ b/page2.html
@@ -293,7 +293,7 @@
                     <ul>
                         <li class="list mbr-fonts-style display-7">Telefon:
                             07xxxxx </li>
-                        <li>Mail:
+                        <li class="list mbr-fonts-style display-7">Mail:
                             xxx@xxx.ro
                         </li>
                     </ul>
